grammar.js
    source_file: ($) => optional($._block),

    block: ($) => $._block,

    _block: ($) =>
      choice(
        seq(
          repeat1(seq($._statement, optional(";"))),
          optional(seq($._last_statement, optional(";"))),
        ),
        seq($._last_statement, optional(";")),
      ),

    local_declaration: ($) =>
      seq(
        optional("export"),
        "local",
        field("bindings", $.binding_list),
        optional(seq("=", field("values", $.expression_list))),
      ),

    const_declaration: ($) =>
      seq(
        optional("export"),
        "const",
        field("bindings", $.binding_list),
        "=",
        field("values", $.expression_list),
      ),

    binding_list: ($) => commaSep1($.binding),

    binding: ($) => seq(field("name", $._identifier), optional(seq(":", field("type", $._type)))),

    assignment_statement: ($) =>
      seq(field("left", $.assignment_target_list), "=", field("right", $.expression_list)),

    assignment_target_list: ($) => commaSep1($._assignment_target),

    _assignment_target: ($) => choice($._identifier, $.field_expression, $.index_expression),

    expression_statement: ($) => choice($.call_expression, $.method_call_expression),

    function_declaration: ($) =>
      seq(
        optional(field("attributes", $.attributes)),
        optional("export"),
        "function",
        field("name", $.function_name),
        $.function_body,
      ),

    const_function_declaration: ($) =>
      seq(
        optional(field("attributes", $.attributes)),
        "const",
        "function",
        field("name", $._identifier),
        $.function_body,
      ),

    class_declaration: ($) =>
      seq(
        optional("export"),
        optional("open"),
        "class",
        field("name", $._identifier),
        optional(seq("extends", field("superclass", $.class_reference))),
        repeat(field("member", $._class_member)),
        "end",
      ),

    class_reference: ($) =>
      choice(
        $._identifier,
        seq(field("module", $._identifier), ".", field("name", $._identifier)),
        seq(field("module", $._identifier), "[", field("key", $._expression), "]"),
      ),

    _class_member: ($) => choice($.class_property, $.class_method),

    class_property: ($) =>
      seq("public", field("name", $._identifier), optional(seq(":", field("type", $._type)))),

    class_method: ($) =>
      seq(optional("public"), "function", field("name", $._identifier), $.function_body),

    function_name: ($) =>
      seq(
        field("name", $._identifier),
        repeat(seq(".", field("field", $._identifier))),
        optional(seq(":", field("method", $._identifier))),
      ),

    function_body: ($) =>
      seq(
        optional(field("generics", $.generic_parameter_list)),
        field("parameters", $.parameter_list),
        optional(seq(":", field("return_type", $._return_type))),
        optional(field("body", $.block)),
        "end",
      ),

    parameter_list: ($) =>
      seq(
        "(",
        optional(
          choice(
            commaSep1($.parameter),
            seq(commaSep1($.parameter), ",", $.variadic_parameter),
            $.variadic_parameter,
          ),
        ),
        ")",
      ),

    parameter: ($) => seq(field("name", $._identifier), optional(seq(":", field("type", $._type)))),

    if_statement: ($) =>
      seq(
        "if",
        choice(
          seq(field("condition", $._expression), "then", optional(field("consequence", $.block))),
          $.if_local_clause,
        ),
        repeat(field("alternative", $.elseif_clause)),
        optional(field("alternative", $.else_clause)),
        "end",
      ),

    _if_local_condition: ($) =>
      seq(
        choice("local", "const"),
        field("binding", $.binding),
        "=",
        field("condition", $._expression),
        "then",
      ),

    if_local_clause: ($) => seq($._if_local_condition, optional(field("consequence", $.block))),

    elseif_clause: ($) =>
      seq(
        "elseif",
        choice(
          seq(field("condition", $._expression), "then", optional(field("consequence", $.block))),
          $.if_local_clause,
        ),
      ),

    else_clause: ($) => seq("else", optional(field("body", $.block))),

    return_statement: ($) =>
      prec.right(seq("return", optional(field("values", $.expression_list)))),

    expression_list: ($) => prec.right(commaSep1($._expression)),

    _expression: ($) =>
      choice($._simple_expression, $.unary_expression, $.binary_expression, $.type_cast_expression),

    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    function_expression: ($) =>
      seq(optional(field("attributes", $.attributes)), "function", $.function_body),

    if_expression: ($) =>
      prec.right(
        seq(
          "if",
          choice(
            seq(field("condition", $._expression), "then", field("consequence", $._expression)),
            $.if_local_expression_clause,
          ),
          repeat(field("alternative", $.elseif_expression_clause)),
          "else",
          field("alternative", $._expression),
        ),
      ),

    elseif_expression_clause: ($) =>
      seq(
        "elseif",
        choice(
          seq(field("condition", $._expression), "then", field("consequence", $._expression)),
          $.if_local_expression_clause,
        ),
      ),

    if_local_expression_clause: ($) =>
      seq($._if_local_condition, field("consequence", $._expression)),

    unary_expression: ($) =>
      prec(
        PREC.UNARY,
        seq(field("operator", choice("not", "-", "#")), field("operand", $._expression)),
      ),

    binary_expression: ($) =>
      choice(
        ...BINARY_OPERATORS.map(([operator, precedence, associativity]) => {
          const rule = seq(
            field("left", $._expression),
            field("operator", operator),
            field("right", $._expression),
          );

          return associativity === "right"
            ? prec.right(precedence, rule)
            : prec.left(precedence, rule);
        }),
      ),

    field_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(field("table", $._prefix_expression), ".", field("field", $._identifier)),
      ),

    index_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(field("table", $._prefix_expression), "[", field("index", $._expression), "]"),
      ),

    call_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(field("function", $._prefix_expression), field("arguments", $.arguments)),
      ),

    method_call_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field("receiver", $._prefix_expression),
          ":",
          field("method", $._identifier),
          optional(field("type_arguments", $.explicit_type_arguments)),
          field("arguments", $.arguments),
        ),
      ),

    type_instantiation_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field("function", $._prefix_expression),
          field("type_arguments", $.explicit_type_arguments),
        ),
      ),

    explicit_type_arguments: ($) => seq("<<", optional($.type_argument_list), ">>"),

    _prefix_expression: ($) =>
      choice(
        $._identifier,
        $.parenthesized_expression,
        $.field_expression,
        $.index_expression,
        $.call_expression,
        $.method_call_expression,
        $.type_instantiation_expression,
      ),

    arguments: ($) =>
      choice(
        seq("(", optional($.expression_list), ")"),
        $.table_constructor,
        alias($._string_literal, $.string),
      ),

    table_constructor: ($) =>
      seq(
        "{",
        optional(seq(sep1($.table_field, choice(",", ";")), optional(choice(",", ";")))),
        "}",
      ),

    table_field: ($) =>
      choice(
        seq("[", field("key", $._expression), "]", "=", field("value", $._expression)),
        seq(field("key", $._identifier), "=", field("value", $._expression)),
        field("value", $._expression),
      ),

    boolean: () => choice("true", "false"),

    integer: () => token(choice(/0[xX][0-9a-fA-F_]+i/, /0[bB][01_]+i/, /[0-9][0-9_]*i/)),

    number: () =>
      token(
        choice(
          /0[xX][0-9a-fA-F_]+/,
          /0[bB][01_]+/,
          /(?:[0-9][0-9_]*(?:\.[0-9_]*)?|\.[0-9][0-9_]*)(?:[eE][+-]?[0-9_]+)?/,
        ),
      ),

    string: ($) => choice($._string_literal, $.interpolated_string),

    _string_literal: ($) => choice($.quoted_string, $.long_string),

    quoted_string: ($) =>
      choice(
        seq(
          '"',
          repeat(choice(alias($._double_string_content, $.string_content), $.escape_sequence)),
          token.immediate('"'),
        ),
        seq(
          "'",
          repeat(choice(alias($._single_string_content, $.string_content), $.escape_sequence)),
          token.immediate("'"),
        ),
      ),

    _double_string_content: () => token.immediate(prec(1, /[^"\\\r\n]+/)),

    _single_string_content: () => token.immediate(prec(1, /[^'\\\r\n]+/)),

    interpolation_content: () => token.immediate(prec(1, /[^`{\\\r\n]+/)),

    escape_sequence: ($) =>
      choice(
        $.unicode_escape,
        $.decimal_escape,
        $.hex_escape,
        $.whitespace_escape,
        $.simple_escape,
      ),

    whitespace_escape: () => token.immediate(prec(2, seq("\\z", repeat(/[ \t\v\f\r\n]/)))),

    simple_escape: () => token.immediate(choice(/\\[^0-9uxz\r\n]/, /\\(?:\r\n|\r|\n)/)),

    interpolated_string: ($) =>
      seq(
        "`",
        repeat(
          choice(
            $.interpolation_content,
            $.escape_sequence,
            seq(alias($._interpolation_open, "{"), field("expression", $._expression), "}"),
          ),
        ),
        token.immediate("`"),
      ),

    generic_parameter_list: ($) =>
      seq(
        "<",
        choice(
          seq(commaSep1($.generic_type), optional(seq(",", commaSep1($.generic_type_pack)))),
          commaSep1($.generic_type_pack),
        ),
        ">",
      ),

    generic_type: ($) => field("name", $._identifier),

    generic_type_pack: ($) => seq(field("name", $._identifier), "..."),

    _type: ($) =>
      choice($._type_atom, $.union_type, $.intersection_type, $.optional_type, $.leading_type),

    type_reference: ($) =>
      prec.right(
        seq(
          optional(seq(field("module", $._identifier), ".")),
          field("name", $._identifier),
          optional(seq("<", optional(field("arguments", $.type_argument_list)), ">")),
        ),
      ),

    type_argument_list: ($) => commaSep1($._type_argument),

    _type_argument: ($) => choice($._type, $._type_pack),

    function_type: ($) =>
      seq(
        optional(field("generics", $.generic_parameter_list)),
        field("parameters", $.function_type_parameters),
        "->",
        field("return_type", $._return_type),
      ),

    attributed_function_type: ($) =>
      seq(field("attributes", $.attributes), field("type", $.function_type)),

    function_type_parameters: ($) =>
      seq(
        "(",
        optional(
          choice(
            commaSep1($.function_type_parameter),
            seq(commaSep1($.function_type_parameter), ",", $._variadic_type_pack),
            $._variadic_type_pack,
          ),
        ),
        ")",
      ),

    function_type_parameter: ($) =>
      seq(optional(seq(field("name", $._identifier), ":")), field("type", $._type)),

    _return_type: ($) =>
      choice(alias($._packed_function_type, $.function_type), $._type, $._type_pack),

    type_pack: ($) => seq("(", optional($.type_list), ")"),

    type_list: ($) =>
      prec.right(
        choice(
          commaSep1($._type),
          seq(commaSep1($._type), ",", prec(1, $._variadic_type_pack)),
          prec(1, $._variadic_type_pack),
        ),
      ),

    _variadic_type_pack: ($) => choice($.variadic_type_pack, $.generic_type_pack),

    variadic_type_pack: ($) => seq("...", field("type", $._type)),

    table_type: ($) => seq("{", optional(choice($.array_type, $._table_type_members)), "}"),

    array_type: ($) =>
      seq(optional(field("access", $.access_qualifier)), field("element", $._type)),

    _table_type_members: ($) =>
      choice(
        seq($.property_type, optional(seq(choice(",", ";"), optional($._table_type_members)))),
        seq($.indexer_type, optional(seq(choice(",", ";"), optional($._table_properties)))),
      ),

    property_type: ($) =>
      prec.dynamic(
        1,
        seq(
          optional(field("access", $.access_qualifier)),
          field("name", choice($._identifier, seq("[", $._string_literal, "]"))),
          ":",
          field("type", $._type),
        ),
      ),

    access_qualifier: () => choice("read", "write"),

    optional_type: ($) => prec.left(PREC.TYPE_OPTIONAL, seq(field("type", $._union_operand), "?")),

    _union_operand: ($) => prec(PREC.TYPE_UNION, choice($._type_atom, $.optional_type)),

    declare_global: ($) =>
      seq("declare", field("name", $._identifier), ":", field("type", $._type)),

    declare_function: ($) =>
      seq(
        optional(field("attributes", $.attributes)),
        "declare",
        "function",
        field("name", $._identifier),
        optional(field("generics", $.generic_parameter_list)),
        field("parameters", $.declare_parameter_list),
        optional(seq(":", field("return_type", $._return_type))),
      ),

    declare_parameter_list: ($) =>
      seq(
        "(",
        optional(
          choice(
            commaSep1($.declare_parameter),
            seq(commaSep1($.declare_parameter), ",", $.declare_variadic_parameter),
            $.declare_variadic_parameter,
          ),
        ),
        ")",
      ),

    declare_parameter: ($) => seq(field("name", $._identifier), ":", field("type", $._type)),

    declare_variadic_parameter: ($) =>
      seq("...", ":", field("type", choice($._type, $.generic_type_pack))),

    extern_type_declaration: ($) =>
      seq(
        "declare",
        "extern",
        "type",
        field("name", $._identifier),
        optional(seq("extends", field("supertype", $._identifier))),
        "with",
        repeat(field("member", $._extern_member)),
        "end",
      ),

    _extern_member: ($) => choice($.extern_property, $.extern_indexer, $.extern_method),

    extern_property: ($) =>
      prec.dynamic(
        1,
        seq(
          optional(field("access", $.access_qualifier)),
          field("name", choice($._identifier, seq("[", $._string_literal, "]"))),
          ":",
          field("type", $._type),
        ),
      ),

    extern_indexer: ($) =>
      seq(
        optional(field("access", $.access_qualifier)),
        "[",
        field("key", $._type),
        "]",
        ":",
        field("value", $._type),
      ),

    extern_method: ($) =>
      seq(
        optional(field("attributes", $.attributes)),
        "function",
        field("name", $._identifier),
        optional(field("generics", $.generic_parameter_list)),
        field("parameters", $.parameter_list),
        optional(seq(":", field("return_type", $._return_type))),
      ),

    attributes: ($) => repeat1($.attribute),

    attribute: ($) =>
      choice(
        seq("@", field("name", alias(token.immediate(/[A-Za-z_][A-Za-z0-9_]*/), $.identifier))),
        seq("@[", commaSep1($.parameterized_attribute), "]"),
      ),

    parameterized_attribute: ($) =>
      seq(field("name", $._identifier), optional(field("arguments", $.attribute_argument))),

    attribute_argument: ($) =>
      choice($._string_literal, $.literal_table, seq("(", optional(commaSep1($._literal)), ")")),

    _literal: ($) => choice($.nil, $.boolean, $.number, $._string_literal, $.literal_table),

    identifier: () => /[A-Za-z_][A-Za-z0-9_]*/,
