test/corpus/declarations.txt
==================
Declared globals and functions
==================

declare version: string
declare function map<T, U>(values: {T}, transform: (T) -> U): {U}
declare function pack<T...>(...: T...): T...
@checked declare function assert<T>(value: T, message: string?): T

---

(source_file
  (declare_global
    (identifier)
    (type_reference
      (identifier)))
  (declare_function
    (identifier)
    (generic_parameter_list
      (generic_type
        (identifier))
      (generic_type
        (identifier)))
    (declare_parameter_list
      (declare_parameter
        (identifier)
        (table_type
          (array_type
            (type_reference
              (identifier)))))
      (declare_parameter
        (identifier)
        (function_type
          (function_type_parameters
            (function_type_parameter
              (type_reference
                (identifier))))
          (type_reference
            (identifier)))))
    (table_type
      (array_type
        (type_reference
          (identifier)))))
  (declare_function
    (identifier)
    (generic_parameter_list
      (generic_type_pack
        (identifier)))
    (declare_parameter_list
      (declare_variadic_parameter
        (generic_type_pack
          (identifier))))
    (generic_type_pack
      (identifier)))
  (declare_function
    (attributes
      (attribute
        (identifier)))
    (identifier)
    (generic_parameter_list
      (generic_type
        (identifier)))
    (declare_parameter_list
      (declare_parameter
        (identifier)
        (type_reference
          (identifier)))
      (declare_parameter
        (identifier)
        (optional_type
          (type_reference
            (identifier)))))
    (type_reference
      (identifier))))

==================
External type
==================

declare extern type Child extends Parent with
  read name: string
  write ["display-name"]: string
  [string]: unknown
  @checked function method(self, value: number): string
end

---

(source_file
  (extern_type_declaration
    (identifier)
    (identifier)
    (extern_property
      (access_qualifier)
      (identifier)
      (type_reference
        (identifier)))
    (extern_property
      (access_qualifier)
      (quoted_string
        (string_content))
      (type_reference
        (identifier)))
    (extern_indexer
      (type_reference
        (identifier))
      (type_reference
        (identifier)))
    (extern_method
      (attributes
        (attribute
          (identifier)))
      (identifier)
      (parameter_list
        (parameter
          (identifier))
        (parameter
          (identifier)
          (type_reference
            (identifier))))
      (type_reference
        (identifier)))))

==================
Declaration-context function attributes
==================

declare bit32: {
  band: @checked (...number) -> number,
  read version: string,
}

---

(source_file
  (declare_global
    (identifier)
    (table_type
      (property_type
        (identifier)
        (attributed_function_type
          (attributes
            (attribute
              (identifier)))
          (function_type
            (function_type_parameters
              (variadic_type_pack
                (type_reference
                  (identifier))))
            (type_reference
              (identifier)))))
      (property_type
        (access_qualifier)
        (identifier)
        (type_reference
          (identifier))))))
